--- a/src/style.css
+++ b/src/style.css
@@ -120,6 +120,10 @@ button {
 
 .display {
   display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 30px;
   justify-self: center;
   align-self: center;
   height: 300px;
@@ -127,4 +131,25 @@ button {
   margin-bottom: 100px;
   border-radius: 25px;
   background-color: #377270;
+}
+
+.values {
+  color: white
+}
+
+.keys {
+  color: white;
+  margin-left: 10px;
+}
+
+.stat {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.switchTemp {
+  margin-left: 20px;
+  margin-bottom: -10px;
+  margin-top: -50px;
 }
